fix overlap issue

--- a/less/main.less
+++ b/less/main.less
@@ -82,7 +82,7 @@ button {
     background: rgba(0, 0, 0, 0.6);
     border-radius: 3px;
     text-align: center;
-    -webkit-transform: translateZ(1px);
+    -webkit-transform: translateZ(2px);
     overflow: hidden;
 
     .main {
@@ -155,13 +155,12 @@ button {
     color: #444;
     width: 400px;
     text-align: left;
-    -webkit-transform: translateZ(1px);
     overflow-x: hidden;
     overflow-y: auto;
     border-left: 1px solid #aaa;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.75);
     .transition(~"transform 200ms");
-    -webkit-transform: translateX(-405px);
+    -webkit-transform: translateZ(0) translateX(-0px); /* xxx -405 */
 
     &.show {
         -webkit-transform: translateX(0);
